# Mini-to-do-list-c14-Atividade

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  models.py  routes.py
app/templates/: add_task.html  base.html  index.html
scripts/: send_email.py
tests/: test_app.py  test_mocks.py
